--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2191,7 +2191,7 @@ input, select, textarea {
 			display: block;
 			height: 100%;
 			left: 0;
-			opacity: 0.2;
+			opacity: 0;
 			position: absolute;
 			top: 0;
 			width: 100%;
@@ -2233,9 +2233,9 @@ input, select, textarea {
 				-ms-transition: -ms-transform 0.1s ease-in-out, font-size 0.1s ease-in-out;
 				transition: transform 0.1s ease-in-out, font-size 0.1s ease-in-out;
 				color: #fff;
-				font-size: 6em;
+				font-size: 4em;
 				height: 1em;
-				left: 50%;
+				left: 48%;
 				line-height: 1em;
 				margin: -0.5em 0 0 -0.5em;
 				position: absolute;
@@ -2682,7 +2682,7 @@ input, select, textarea {
 
 				.feature.left .image img {
 					right: 0;
-					top: 0;
+					top: 0em;
 				}
 
 			.feature.left .content {
